# RulesetNotebookDemo

./: .gitignore  README.md  RulesetNotebook.spec  app.py  build.py  check.py  compiler-plan.md  coverage.txt  plan.md  pyproject.toml  reading.md  todo.md
.github/workflows/: ci.yml
src/ruleset_notebook/: __init__.py  __main__.py  cli.py  engine.py  examples.py  jobs.py  language.py
src/ruleset_notebook/domain/: __init__.py  diagnostics.py  results.py  rules.py  source.py  terms.py
src/ruleset_notebook/ui/: __init__.py  main_window.py
tests/: conftest.py
tests/integration/: test_shared_core.py
tests/ui/: test_main_window.py
tests/unit/: test_cli.py  test_demo_parser.py  test_engine.py  test_examples.py  test_jobs.py  test_prototype.py
tests/unit/domain/: test_results.py  test_rules.py  test_source.py  test_terms.py
