[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruleset-notebook"
version = "0.1.0"
description = "A desktop workbench for term-rewriting systems"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "PySide6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pyinstaller>=6.0",
]

[project.scripts]
ruleset-notebook-cli = "ruleset_notebook.cli:main"

[project.gui-scripts]
ruleset-notebook = "ruleset_notebook.ui.main_window:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
